chore(playground): add favicon

--- a/playground/index.html
+++ b/playground/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
     <script>
       const coverSupport = 'CSS' in window && typeof CSS.supports === 'function' && (CSS.supports('top: env(a)')
   || CSS.supports('top: constant(a)'))
